<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/title_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_checkBox"
        android:orderInCategory="100"
        android:title="@string/title_checkBox"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_spiner"
        android:orderInCategory="100"
        android:title="@string/title_spiner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_calendar"
        android:orderInCategory="100"
        android:title="@string/title_calendar"
        app:showAsAction="never" />
</menu>