<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/chooseStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickChooseStartDate"
        android:text="@string/StartDate" />

    <Button
        android:id="@+id/chooseEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickChooseEndDate"
        android:text="@string/EndDate" />

    <CalendarView
        android:id="@+id/startDateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <CalendarView
        android:id="@+id/endtDateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E2E2E2" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="clickBtnOK"
        android:text="@string/btnOK" />

</LinearLayout>